# UlisseCTF2025

./: .gitattributes  README.md
crypto01/: README.md
crypto01/src/: Makefile  docker-compose.yml  server.py
crypto02/: README.md
crypto02/src/: Dockerfile  Makefile  client.py  docker-compose.yml  server.py  startserver.sh
crypto02/writeup/: exploit.py
crypto03/: README.md
crypto03/src/: Makefile
crypto03/writeup/: exploit.py
crypto04/: README.md
crypto04/src/: Dockerfile  docker-compose.yml  entrypoint.sh  (+1 more)
forensic01/: README.md
forensic02/: README.md
forensic03/: README.md
misc01/: README.md
misc02/: README.md
misc03/: README.md
misc04/: README.md
misc05/: README.md
misc07/: README.md
misc08/: README.md
misc09/: README.md
pwn01/: README.md
pwn03/: README.md
pwn04/: README.md
rev01/: README.md
rev02/: README.md
rev03/: README.md
rev03/src/firmware/: CMakeLists.txt  prj.conf  sample.yaml
rev03/src/firmware/boards/: esp32_devkitc_wroom_esp32_procpu.overlay
rev03/src/firmware/scripts/: aes.js  generate-firmware.sh
rev03/src/firmware/src/: main.c  secrets.h
rev04/: README.md
rev05/: README.md
web01/: README.md
web02/: README.md
web03/: README.md
web04/: README.md
web04/src/web/: .env  .env.redacted  dockerfile  entrypoint.sh  pyproject.toml
web04/src/web/app/: __init__.py  utils.py
web04/src/web/app/static/: pow.js
web04/src/web/app/static/uploads/: 2a31e84a-11f6-11f0-ae92-56571f0b6a62.css
web04/src/web/app/templates/: base.html  profile.html
web04/src/web/app/templates/post/: view.html
(+251 files in other folders)
